Add auto discovery

--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,12 @@
         "psr-4": {
             "Khaleghi\\Media\\": "src/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Khaleghi\\Media\\MediaServiceProvider"
+            ]
+        }
     }
 }
