--- a/composer.json
+++ b/composer.json
@@ -4,18 +4,28 @@
     "type": "library",
     "authors": [
         {
-            "name": "saeid-khaleghi",
+            "name": "Saeid Khaleghi",
             "email": "saeid.khaleghi@gmail.com"
         }
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^7.1.3",
+        "laravel/framework":"~5.1"
+    },
+    "require-dev": {
         "intervention/image": "^2.4"
+    },
+    "autoload-dev": {
+        "classmap": ["tests/TestCase.php"]
     },
     "autoload": {
         "psr-4": {
-            "Khaleghi\\Media\\": "src/"
+            "Khaleghi\\Media\\": "src"
         }
+    },
+    "scripts": {
+        "test": "phpunit"
     },
     "extra": {
         "laravel": {
