--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.1.3",
-        "laravel/framework":"~5.1"
-    },
-    "require-dev": {
+        "laravel/framework":"~5.1",
         "intervention/image": "^2.4"
     },
     "autoload-dev": {
